--- a/app/src/main/res/layout/fragment_serial_putaway_detail.xml
+++ b/app/src/main/res/layout/fragment_serial_putaway_detail.xml
@@ -84,6 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@id/rel1"
+                android:layout_marginBottom="@dimen/_50sdp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/pattern_serial_putaway_detail" />
 
