--- a/app/src/main/res/layout/layout_serial_transfer_top_info.xml
+++ b/app/src/main/res/layout/layout_serial_transfer_top_info.xml
@@ -57,10 +57,34 @@
             </LinearLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rel1"
+            android:id="@+id/relTotal"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/paddingSerialInfoLayout"
+            android:paddingEnd="@dimen/paddingSerialInfoLayout">
+
+
+            <TextView
+                android:id="@+id/totalTv"
+                style="@style/pattern_putaway_smallTv"
+                android:layout_marginStart="@dimen/marginStartLocationTransfer"
+                android:text="@string/quantity" />
+
+            <TextView
+                android:id="@+id/total"
+                style="@style/pattern_receieve_tv1"
+                android:text="@string/_0" />
+
+
+        </LinearLayout>
         <RelativeLayout
             android:id="@+id/rel2"
             android:layout_marginTop="@dimen/marginTop5ForLayouts"
-            android:layout_below="@id/rel1"
+            android:layout_below="@id/relTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
